--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linealysis",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "linealysis",
   "license": "MIT",
   "repository": "https://github.com/moppymopperson/linealysis",
@@ -52,7 +52,6 @@
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|js)$",
     "moduleFileExtensions": ["ts", "js"],
-    "testEnvironment": "node",
-    "mapCoverage": true
+    "testEnvironment": "node"
   }
 }
